# rust-learning

./: Cargo.toml  change.bat
chapter_02/guessing_game/src/: main.rs
chapter_03/christmas/src/: main.rs
chapter_03/collatz/src/: main.rs
chapter_03/fib/src/: main.rs
chapter_04/archive_log/: Cargo.toml
chapter_04/archive_log/src/: main.rs
chapter_04/file_extension/: Cargo.toml
chapter_04/file_extension/src/: main.rs
chapter_04/payload/src/: main.rs
chapter_05/file_descriptor/: Cargo.toml
chapter_05/file_descriptor/src/: main.rs
chapter_05/server_rack/: Cargo.toml
chapter_05/server_rack/src/: main.rs
chapter_06/packet_decoder/: Cargo.toml
chapter_06/packet_decoder/src/: main.rs
chapter_06/virtual_cpu/: Cargo.toml
chapter_06/virtual_cpu/src/: main.rs
chapter_07/packet_decoder_refactored/: Cargo.toml
chapter_07/packet_decoder_refactored/src/: error.rs  lib.rs  main.rs  messages.rs  parser.rs
chapter_07/refactor_assignment/: Cargo.toml
chapter_07/refactor_assignment/src/: config.rs  error.rs  lib.rs  main.rs
